syntax = "proto3";

package api;
option go_package = "api";

enum MailType {
  MAIL_TYPE_UNKNOWN = 0;
  MAIL_TYPE_TEXT = 1;
  MAIL_TYPE_HTML = 2;
}

message SendMailRequest {
  MailType type = 1; // text or html
  string to = 2; // one email address
  string subject = 3; // text
  string body = 4; // html
}

message SendMailResponse {
  bool success = 1;
}

service MailService {
  rpc SendMail(SendMailRequest) returns (SendMailResponse);
}
